# decipher-research-agent

./: .dockerignore  .env.example  .gitignore  GETTING-STARTED.md  LICENSE  README.md  docker-compose.yml
.windsurf/rules/: codingrules.md
backend/: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  docker.sh  entrypoint.sh  init_db.py  main.py  pyproject.toml  run.py  server.py  setup.py  test_audio.html
backend/agents/: __init__.py  audio_overview_agent.py  chat_agent.py  mindmap_agent.py  sources_research_agent.py  topic_research_agent.py
backend/config/: __init__.py  llm.py  logging.py  settings.py
backend/config/sources_research/: agents.py  tasks.py
backend/config/topic_research/: agents.py  tasks.py
backend/models/: __init__.py  audio_overview_models.py  chat_models.py  db.py  mindmap_models.py  task_models.py  topic_research_models.py
backend/routers/: __init__.py  audio.py  chat.py  research.py
backend/services/: __init__.py  audio_overview_service.py  local_storage.py  markitdown_service.py  notebook_repository.py  qdrant_service.py  r2_service.py  storage_factory.py  task_repository.py  task_service.py  tts_service.py
client/: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker.sh  eslint.config.mjs  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/components/: auth-aware-button.tsx  footer.tsx  header.tsx
client/lib/: auth-client.ts  auth.ts  notebook-types.ts  prisma.ts  r2.ts
(+36 files in other folders)
