[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.38.0",
    "crewai>=0.120.1",
    "crewai-tools[mcp]>=0.45.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langtrace-python-sdk>=3.8.18",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.1",
    "pydantic>=2.11.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
